plugins {
  id 'application'
  id 'google-java-format'
}

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

repositories {
  mavenCentral()
  jcenter()
}

dependencies {
  compileOnly 'org.jetbrains:annotations:19.0.0'
  testImplementation 'org.assertj:assertj-core:3.18.1'
  implementation 'com.squareup:javapoet:1.13.0'
  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.2'
  testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
}

test {
  useJUnitPlatform()
}

application {
  mainClass = 'com.example.generator.Generator'
}

tasks.named('run').configure {
  it.outputs.dir("${project(':app').projectDir}/src/main/generated")
}

tasks.withType(JavaCompile) {
  options.compilerArgs = ["--enable-preview"]
}

tasks.withType(JavaExec) {
  jvmArgs('--enable-preview')
}
